data/derived/sp14/progs/unify/prog1889.ml.out
Characters 239-240:
  let (_, res) = List.fold_left f base args in
                                ^
Error: This expression has type
         int list -> int list * int list -> 'a list * int list
       but an expression was expected of type
         int list -> int list * int list -> int list
       Type 'a list * int list is not compatible with type int list 
